<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>soucedemo</groupId>
    <artifactId>soucedemo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <testng.version>7.0.0</testng.version>
        <selenium.version>3.141.59</selenium.version>
        <webdrivermanager.version>4.4.1</webdrivermanager.version>
        <alluretestng.version>2.7.0</alluretestng.version>
        <aspectjweaver.version>1.9.6</aspectjweaver.version>
        <allurejavacommons.version>2.13.9</allurejavacommons.version>
        <!--<mavensurefireplugin.version>3.0.0-M5</mavensurefireplugin.version>-->
        <alluremavenplugin.version>2.10.0</alluremavenplugin.version>
    </properties>


    <!--<build>-->
    <!--<plugins>-->
    <!--<plugin>-->
    <!--<groupId>org.apache.maven.plugins</groupId>-->
    <!--<artifactId>maven-surefire-plugin</artifactId>-->
    <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
    <!--&lt;!&ndash;&lt;!&ndash;<forkCount>3</forkCount>&ndash;&gt;&ndash;&gt;-->
    <!--&lt;!&ndash;&lt;!&ndash;<reuseForks>true</reuseForks>&ndash;&gt;&ndash;&gt;-->
    <!--&lt;!&ndash;<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>&ndash;&gt;-->
    <!--&lt;!&ndash;</configuration>&ndash;&gt;-->
    <!--<version>3.0.0-M5</version>-->
    <!--</plugin>-->
    <!--</plugins>-->
    <!--</build>-->
    <build>
        <plugins>
            <!--<plugin>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-surefire-plugin</artifactId>-->
            <!--<version>${mavensurefireplugin.version}</version>-->
            <!--<configuration>-->
            <!--<argLine>-->
            <!-- -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.6/aspectjweaver-1.9.6.jar -Xmx256m-->
            <!--</argLine>-->
            <!--</configuration>-->
            <!--<dependencies>-->
            <!--<dependency>-->
            <!--<groupId>org.aspectj</groupId>-->
            <!--<artifactId>aspectjweaver</artifactId>-->
            <!--<version>${aspectjweaver.version}</version>-->
            <!--</dependency>-->
            <!--</dependencies>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <forkCount>2</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>
                        -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.1/aspectjweaver-1.9.1.jar
                        -Xmx256m
                    </argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>1.9.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${alluremavenplugin.version}</version>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${alluretestng.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectjweaver.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <!--<scope>test</scope>-->
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-java-commons</artifactId>
            <version>${allurejavacommons.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>